images and text

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Misinformation and Dark Patterns Homework</title>
+  <title>Misinformation and Dark Patterns</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,7 +11,7 @@
       padding: 0;
     }
     header {
-      background-color: #3366cc;
+      background-color: #cc3380;
       color: white;
       padding: 15px;
       text-align: center;
@@ -24,7 +24,8 @@
       border-radius: 5px;
     }
     h2 {
-      color: #3366cc;
+      color: #cc3380
+      ;
     }
     .example {
       border: 1px solid #ccc;
@@ -43,15 +44,16 @@
 <body>
   <header>
     <h1>Misinformation & Dark Patterns</h1>
-    <p>3 Examples for Homework</p>
+    <p>Sam Kye</p>
   </header>
 
   <main>
     <div class="example">
-      <h2>Example 1: Forced Continuity</h2>
+      <h2>Example 1: Duolingo and Confirmshaming</h2>
       <p><strong>Type:</strong> Dark Pattern</p>
-      <p><strong>Who benefits:</strong> The platform (they make money from subscriptions)</p>
-      <p>Description: Some apps ask for your credit card for a “free trial” but then charge you automatically without a clear reminder.</p>
+      <p><strong>Who benefits:</strong> The platform: higher user engagement and activity, more long-term users and chances of users joining Duolingo Plus which is a subscription.</p>
+      <p>Description: Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
+     <img src="IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="300">
     </div>
 
     <div class="example">
@@ -69,8 +71,5 @@
     </div>
   </main>
 
-  <footer>
-    <p>Made for class homework. Hosted with GitHub Pages.</p>
-  </footer>
 </body>
 </html>
