--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
       <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The platform: higher user engagement and activity, more long-term users and chances of users joining Duolingo Plus which is a subscription.</p>
       <p>Description: Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
+      <p>Here are some screenshotted examples from my own Duolingo app:</p>
      <img src="IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="300">
+     <img src="IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="300">
+     <img src="IMG_2594.jpeg" alt="Duolingo confirmshaming popup" width="300">
+     <img src="IMG_2595.jpeg" alt="Duolingo confirmshaming popup" width="300">
     </div>
 
     <div class="example">
