--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       <h2>Example 1: Duolingo and Confirmshaming</h2>
       <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The platform: higher user engagement and activity, more long-term users and chances of users joining Duolingo Plus which is a subscription.</p>
-      <p>Description: Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
+      <p><strong>Description:</strong> Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
       <p>Here are some screenshotted examples from my own Duolingo app:</p>
-     <img src="images/IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="300">
-     <img src="images/IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="300">
-     <img src="images/IMG_2594.jpeg" alt="Duolingo confirmshaming popup" width="300">
-     <img src="images/IMG_2595.jpeg" alt="Duolingo confirmshaming popup" width="300">
+     <img src="images/IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="200">
+     <img src="images/IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="100">
+     <img src="images/IMG_2594.jpeg" alt="Duolingo confirmshaming popup" width="200">
+     <img src="images/IMG_2595.jpeg" alt="Duolingo confirmshaming popup" width="200">
     </div>
 
     <div class="example">
