--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       <h2>Example 1: Duolingo and Confirmshaming</h2>
       <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The platform: higher user engagement and activity, more long-term users and chances of users joining Duolingo Plus which is a subscription.</p>
-      <p><strong>Description:</strong> Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
-      <p>Here are some screenshotted examples from my own Duolingo app:</p>
+      <p><strong>Description:</strong> Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app. For example, using images of Duo looking really sad because my streak is at 0 or being really excited that I opened the app after months of not using it. I think they use this type of guilt tripping to tug at my heart so that I can restart my streak.</p>
+      <p>Here are some examples from my own Duolingo app:</p>
      <img src="images/IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="200">
-     <img src="images/IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="100">
+     <img src="images/IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="200">
      <img src="images/IMG_2594.jpeg" alt="Duolingo confirmshaming popup" width="200">
      <img src="images/IMG_2595.jpeg" alt="Duolingo confirmshaming popup" width="200">
     </div>
