--- a/index.html
+++ b/index.html
@@ -61,10 +61,19 @@
     </div>
 
     <div class="example">
-      <h2>Example 2: Confirmshaming</h2>
+      <h2>Example 2: Equinox is a Roach Motel!!!</h2>
       <p><strong>Type:</strong> Dark Pattern</p>
-      <p><strong>Who benefits:</strong> The company (more people sign up for emails)</p>
-      <p>Description: A pop-up says “Do you want our deals?” The “No” button says something like “No, I don’t like saving money,” making you feel bad for clicking it.</p>
+      <p><strong>Who benefits:</strong> The company: it becomes a hassle to cancel the membership</p>
+      <p><strong>Description:</strong> ("Roaches check in but they don't check out") Traps users by making the sign-up process super easy but cancellation policies super strict.</p>
+      <p>My roommate had an Equinox membership for under a year and the only way for her to cancel her membership was to Photoshop her visa document...
+        Other methods of cancellation include:
+      <ul>
+        <li>In-Person meetings with a club manager</li>
+        <li>Emailing a specific address and including detailed information.</li>
+        <li>Cancellations are often only allowed if moving a significant distance away or due to medical reasons.</li>
+      </ul>
+      These practices have led to legal actions. In May 2025, Equinox agreed to pay $600,000 in penalties and offer refunds after the New York Attorney General found that the company made it challenging for customers to cancel their memberships. The investigation revealed that Equinox failed to clearly disclose subscription terms and provided cumbersome cancellation procedures.
+      </p>
     </div>
 
     <div class="example">
