--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     </div>
 
     <div class="example">
-      <h2>Example 3: Misleading Headline</h2>
-      <p><strong>Type:</strong> Misinformation</p>
-      <p><strong>Who benefits:</strong> The publisher (they get more clicks and ads)</p>
+      <h2>Amazon and Forced Continuity</h2>
+      <p><strong>Type:</strong> Dartk Pattern</p>
+      <p><strong>Who benefits:</strong> The company because many people forget to cancel their free trials and the more Prime Members, the more purchases made by users.</p>
       <p>Description: An article headline makes a big claim that isn’t true, but people click because it sounds exciting.</p>
     </div>
   </main>
