--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
       <h2>Example 1: Duolingo and Confirmshaming</h2>
       <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The platform: higher user engagement and activity, more long-term users and chances of users joining Duolingo Plus which is a subscription.</p>
-      <p><strong>Description:</strong> Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app. For example, using images of Duo looking really sad because my streak is at 0 or being really excited that I opened the app after months of not using it. I think they use this type of guilt tripping to tug at my heart so that I can restart my streak.</p>
-      <p>Here are some examples from my own Duolingo app:</p>
+      <p><strong>Description:</strong> Guilt-tripping or embarrassing users into continuing their learning streaks/activity on the app.</p>
+      <p><strong>My Example:</strong>For example, using images of Duo looking really sad because my streak is at 0 or being really excited that I opened the app after months of not using it. I think they use this type of guilt tripping to tug at my heart so that I can restart my streak.
+        Here are some examples from my own Duolingo app:</p>
      <img src="images/IMG_2591.jpeg" alt="Duolingo confirmshaming popup" width="200">
      <img src="images/IMG_2593.PNG" alt="Duolingo confirmshaming popup" width="150">
      <img src="images/IMG_2594.jpeg" alt="Duolingo confirmshaming popup" width="200">
@@ -65,7 +66,7 @@
       <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The company: it becomes a hassle to cancel the membership</p>
       <p><strong>Description:</strong> ("Roaches check in but they don't check out") Traps users by making the sign-up process super easy but cancellation policies super strict.</p>
-      <p>My roommate had an Equinox membership for under a year and the only way for her to cancel her membership was to Photoshop her visa document...
+      <p><strong>My Example:</strong>My roommate had an Equinox membership for under a year and the only way for her to cancel her membership was to Photoshop her visa document...
         Other methods of cancellation include:
       <ul>
         <li>In-Person meetings with a club manager</li>
@@ -77,10 +78,14 @@
     </div>
 
     <div class="example">
-      <h2>Amazon and Forced Continuity</h2>
-      <p><strong>Type:</strong> Dartk Pattern</p>
+      <h2>Example 3: Amazon and Forced Continuity</h2>
+      <p><strong>Type:</strong> Dark Pattern</p>
       <p><strong>Who benefits:</strong> The company because many people forget to cancel their free trials and the more Prime Members, the more purchases made by users.</p>
-      <p>Description: An article headline makes a big claim that isn’t true, but people click because it sounds exciting.</p>
+      <p>Description: a “free trial” or low-cost introductory offer automatically turns into a paid subscription without giving the user a clear reminder or easy way to cancel.</p>
+      <p><strong>My Example:</strong> When I signed up for an Amazon Prime student free trial, I was asked for my payment information. Even though the trial is “free.” It’s required just to get the “free” access.
+      Additionally, auto-renew/ the fact that I would be charged after the end date was not clearly said.
+      In the image below, you can see that the payment details are super small unlike the big bolded letters at the top which can easily fool the viewers.</p>
+      <img src="images/Screenshot 2025-09-25 at 12.30.49 AM.png" alt="Amazon Forced Continuity popup" width="200">
     </div>
   </main>
 
